# tock-on-titan

./: .gitignore  .gitmodules  Makefile
boards/: dummy
cargo-registry/: aho-corasick  arrayref  cc  cfg-if-1.0.0  crypto  enum-iterator  enum-iterator-derive  getrandom  hex  itoa  libc-0.2.104  linked-list-allocator-0.8.7  memchr  once_cell  ppv-lite86  rand  rand_chacha  rand_core  regex  regex-syntax  ring  ryu  serde-1.0.103  serde-1.0.130  serde_json  spin-0.9.2  subtle  untrusted  uuid  wasi  winapi  winapi-i686-pc-windows-gnu  winapi-x86_64-pc-windows-gnu
kernel/: chip_layout_a.ld  chip_layout_b.ld
kernel/golf2/src/: main.rs
kernel/h1/src/: chip.rs
kernel/h1/src/hil/flash/: driver.rs  smart_program.rs  virtual_flash.rs
kernel/h1/src/usb/: mod.rs
kernel/h1_syscalls/src/: lib.rs  opensk_syscall.rs
maintainers/: tweak_layout.py
patches/tock/: 01-persistent-storage.patch
userspace/: Build.mk  Cargo.toml  layout_a.ld  layout_b.ld
userspace/erase_storage/: Build.mk  Cargo.toml  Makefile
userspace/erase_storage/src/: main.rs
userspace/low_level_debug/: Build.mk
userspace/nvcounter_ctest/: main.c
userspace/opensk/: Build.mk  Cargo.toml  Makefile
userspace/opensk/crypto_data/: aaguid.txt  opensk.key  opensk_ca.csr  opensk_ca.key  opensk_ca.pem  opensk_ca.srl  opensk_cert.csr  opensk_cert.pem
userspace/opensk/src/: lib.rs  main.rs
userspace/opensk/src/ctap/: client_pin.rs  ctap1.rs  mod.rs  storage.rs
userspace/opensk/src/ctap/hid/: mod.rs
userspace/otpilot/: Build.mk
userspace/store_debug/: Build.mk  Cargo.toml  Makefile
userspace/store_debug/src/: main.rs
userspace/store_latency/: Build.mk  Cargo.toml  Makefile
userspace/store_latency/src/: main.rs
