[package]
name = "opensk"
version = "1.0.0"
authors = [
  "Fabian Kaczmarczyck <kaczmarczyck@google.com>",
  "Guillaume Endignoux <guillaumee@google.com>",
  "Jean-Michel Picod <jmichel@google.com>",
]
license = "Apache-2.0"
edition = "2018"

[dependencies]
libtock_core = { path = "../../third_party/libtock-rs/core" }
libtock_drivers = { path = "../../third_party/libtock-drivers" }
sk-cbor = { path = "../../third_party/cbor" }
crypto = { path = "../../third_party/crypto" }
persistent_store = { path = "../../third_party/persistent_store" }
embedded_flash = { path = "../../third_party/embedded_flash" }
byteorder = { version = "1", default-features = false }
arrayref = "0.3.6"

[features]
default = ["with_ctap1"]
debug_ctap = ["libtock_drivers/debug_ctap"]
std = ["crypto/std", "persistent_store/std"]
verbose = ["debug_ctap", "libtock_drivers/verbose_usb"]
with_ctap1 = ["crypto/with_ctap1"]
with_nfc = ["libtock_drivers/with_nfc"]

[dev-dependencies]
enum-iterator = "0.7.0"

[build-dependencies]
uuid = { version = "0.8", features = ["v4"] }

[profile.dev]
panic = "abort"
lto = true # Link Time Optimization usually reduces size of binaries and static libraries

[profile.release]
panic = "abort"
lto = true # Link Time Optimization usually reduces size of binaries and static libraries
opt-level = "z"
codegen-units = 1
