# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "store_debug"
version = "0.1.0"
authors = ["jcretin <jcretin@google.com>"]
edition = "2018"
publish = false

[dependencies]
libtock = { path = "../../third_party/libtock-rs" }
libtock_core = { path = "../../third_party/libtock-rs/core" }
libtock_drivers = { path = "../../third_party/libtock-drivers" }
embedded_flash = { path = "../../third_party/embedded_flash" }
persistent_store = { path = "../../third_party/persistent_store" }

[features]
default = ["alloc"]
alloc = ["libtock_core/alloc"]
